# RAPDR_babble

./: .gitignore  .gitmodule  .gitmodules  README.md  setup.sh
IJCAI/results/: T_Value_analysis.py  aggregate.csv  aggregate_cook_defocused_results.csv  aggregate_cook_results.csv  aggregate_discover_strike_results.csv  charts.py  labelled_charts.py  quantitative_analysis.py  success_actions_analysis.py
IJCAI_results/results_processed/: aggregate_results.csv
IJCAI_results_2/discover_strike_T_2/: aggregate_results.csv
IJCAI_results_defocused/experiment-1/: aggregate_results.csv
action_primitive_variation/: CMakeLists.txt  package.xml
action_primitive_variation/scripts/: APV_server.py  record_limb_data.py  testServer.py
action_primitive_variation/srv/: APVSrv.srv  AddActionBreakptSrv.srv  RecordLimbDataSrv.srv
agent/: CMakeLists.txt  package.xml  setup.py
agent/launch/: RAPDR.launch  UR5.launch
agent/msg/: SuccessAction.msg  SuccessPlan.msg
agent/scripts/: brain.py  brain_A.py  brain_B.py  drop_object.py  execution_details.py  grasp_object.py  kb_servicing.py  knowledge_base.py  move_arm_client.py  obtain_object.py  partial_action_executor.py  physical_agent_executor.py  press_button.py  press_object.py  push_object.py  run_experiment.py  shake_object.py  test.py  testServer.py  test_action_settings.py  test_actions.py  vision.py
agent/scripts/test/: test_actions.py  test_apv_eval.py
agent/srv/: ActionExecutorSrv.srv  ApproachSrv.srv  BrainSrv.srv  CalcGripperOrientationPoseSrv.srv  DropSrv.srv  EmptyTestSrv.srv  GetActionLocSrv.srv  GetExecutionInfoSrv.srv  GetHardcodedOffsetSrv.srv  GetKBDataSrv.srv  GetMoveMagUnitSrv.srv  GetScenarioGoalSrv.srv  GetScenarioSettingsSrv.srv  GraspSrv.srv  IsVisibleSrv.srv  JointVelocitySrv.srv  MoveToButton.srv  MoveToObject.srv  ObtainObjectSrv.srv  OpenGripperSrv.srv  ParamActionExecutorSrv.srv  PartialPlanExecutorSrv.srv  PddlExecutorSrv.srv  PressButtonSrv.srv  PressSrv.srv  PushObjectSrv.srv  PushSrv.srv  RawActionExecutorSrv.srv  RunExperimentSrv.srv  ShakeSrv.srv  ToggleGripperStateSrv.srv  test.srv
environment/: CMakeLists.txt  package.xml  setup.py
environment/launch/: action_discovery.launch
environment/models/block/: model.urdf
environment/models/breakable_obj/: hor_model1.sdf  model.config  s_model.sdf  test_model.sdf
environment/models/button/: model.urdf
environment/models/cafe_table/: backup.urdf  model.sdf  model.urdf
environment/models/cook/: burner_model.sdf  button_model.sdf
environment/models/cook/materials/scripts/: burner.material
environment/models/cook/meshes/: test2.dae
environment/models/cup_with_cover/: cover_model.sdf  cover_model.urdf  cover_model_heavy.sdf  cover_model_heavy_high_friction.sdf  cover_model_high_friction.sdf  cover_model_low_friction.sdf  cup_model.sdf  cup_model.urdf  cup_model_heavy.sdf  cup_model_high_friction.sdf  cup_model_hollow.sdf
environment/models/grey_wall/: model.sdf
environment/models/marble/: model.config  modelR.rsdf  modelR.sdf
environment/models/marbles/: marbleB.rsdf  marbleB.sdf  marbleR.rsdf  marbleR.sdf
environment/models/plastic_cup/: model.sdf  model.urdf
environment/models/textures/: stove01.dae
environment/msg/: At.msg  Predicate.msg  PredicateList.msg  State.msg
environment/scripts/: initialize_environment.py  load_environment.py  publish_environment.py  scenario_data.py  testServer.py
environment/srv/: EmptySrvReq.srv  HandleEnvironmentSrv.srv  ObjectLocationSrv.srv  ScenarioDataSrv.srv
pddl/: CMakeLists.txt  package.xml  setup.py
pddl/data/: EG_1_domain.pddl  EG_1_problem.pddl  ENMNG_1_problem.pddl  ENMNG_1_problem.pddl.soln  description.txt  test_1_domain.pddl  test_1_problem.pddl  test_orig_domain.pddl  test_orig_problem.pddl
pddl/msg/: Action.msg  ActionExecutionInfoList.msg  ActionInfo.msg  ActionPDDLBinding.msg  DiscreteParamVals.msg  Domain.msg  ExecutableAction.msg  LocationBinding.msg  LocationBindingList.msg  PlanExecutionOutcome.msg  Problem.msg
pddl/scripts/: knowledge_base.py  pddl_checker.py  plan_executor.py  plan_generator.py  planner.py  testServer.py
pddl/srv/: AddActionToKBSrv.srv  CheckEffectsSrv.srv  GetActionPDDLBindingSrv.srv  GetKBActionInfoSrv.srv  GetKBActionLocsSrv.srv  GetKBDomainSrv.srv  GetKBPddlLocsSrv.srv  GetParamOptionsSrv.srv  NovelEffectsSrv.srv  PlanExecutorSrv.srv  PlanGeneratorSrv.srv  RemoveActionFromKBSrv.srv
rapdr_launch/: CMakeLists.txt  package.xml
rapdr_launch/launch/: rapdr.launch
results/: README  description.txt
results/1/: APD_1_problem.pddl  APD_1_problem.pddl.soln  APD_2_problem.pddl  APD_3_problem.pddl  APD_3_problem.pddl.soln  APD_4_problem.pddl  APD_4_problem.pddl.soln  APD_5_problem.pddl  APD_5_problem.pddl.soln  APD_6_problem.pddl  APD_6_problem.pddl.soln  APD_7_domain.pddl  APD_8_problem.pddl  APD_8_problem.pddl.soln  APD_9_problem.pddl  APD_9_problem.pddl.soln  obtain_objectleft_gripperblock_1_bag.csv  obtain_objectleft_gripperblock_1_cps.csv  obtain_objectleft_gripperblock_1_cps_filtered.csv  obtain_objectleft_grippertable_1_bag.csv  obtain_objectleft_grippertable_1_cps.csv  obtain_objectleft_grippertable_1_cps_filtered.csv  obtain_objectleft_gripperwall_1_bag.csv  obtain_objectleft_gripperwall_1_cps.csv  obtain_objectleft_gripperwall_1_cps_filtered.csv  output.txt  press_buttonleft_gripperleft_button_1_bag.csv  press_buttonleft_gripperleft_button_1_cps.csv  press_buttonleft_gripperleft_button_1_cps_filtered.csv  press_buttonleft_gripperright_button_1_bag.csv  press_buttonleft_gripperright_button_1_cps.csv  press_buttonleft_gripperright_button_1_cps_filtered.csv
results/2/: APD_1_domain.pddl  APD_1_problem.pddl  APD_1_problem.pddl.soln  APD_2_domain.pddl  APD_2_problem.pddl  APD_2_problem.pddl.soln  obtain_objectleft_gripperblock_1_bag.csv  obtain_objectleft_gripperblock_1_cps.csv  obtain_objectleft_gripperblock_1_cps_filtered.csv  output.txt  (+12 more)
test/: CMakeLists.txt  package.xml  setup.py
test_scripts/: package.xml  setup.py
tests/: CMakeLists.txt  package.xml  setup.py
util/: CMakeLists.txt  package.xml  setup.py
util/src/util/: test.py  (+15 more)
(+438 files in other folders)
